# ShardSearch

./: CMakeLists.txt  index_demo  searchd  tokenize_demo
sample_docs/: doc2.txt  doc3.txt
src/: main.cpp
src/demos/: index_demo.cpp  tokenize_demo.cpp
src/ir/: bm25.cpp  bm25.hpp  index.cpp  index.hpp  tokenize.cpp
